Fix spacing on logout page.

--- a/src/containers/Logout/Logout.scss
+++ b/src/containers/Logout/Logout.scss
@@ -7,7 +7,7 @@ section.logout
 	border: 1px solid $border-color-light;
 
 	left: 50%;
-	padding: $padding-default;
+	padding: $padding-thick;
 	position: absolute;
 	top: 200px;
 	text-align: center;
@@ -21,7 +21,7 @@ section.logout
 
 	div.logo
 	{
-		margin: 1em 0 2em 0;
+		margin: 0 0 $margin-thick 0;
 
 		img
 		{
@@ -31,11 +31,6 @@ section.logout
 
 	div.message
 	{
-		margin-bottom: 2em;
-	}
-
-	div.link
-	{
-		margin-bottom: 1em;
+		margin-bottom: $margin-thick;
 	}
 }
